--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ch.rcode.oas</groupId>
+    <groupId>com.example.oas</groupId>
     <artifactId>OasSampleBuild</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
